[gd_scene load_steps=3 format=3 uid="uid://bxl6hy1h1yyov"]

[ext_resource type="Script" path="res://Scripts/questions_dress.gd" id="1_p4i7o"]
[ext_resource type="Texture2D" uid="uid://cxesswh1ry6jp" path="res://Scenes(Prefabs)/DressQuestion.png" id="2_dqt13"]

[node name="QuestionsDress" type="Node2D" groups=["question"]]
script = ExtResource("1_p4i7o")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_dqt13")

[node name="Wrong1" type="Button" parent="."]
offset_left = 63.0
offset_top = 411.0
offset_right = 539.0
offset_bottom = 531.0
theme_override_font_sizes/font_size = 68
text = "Traje"

[node name="Correct" type="Button" parent="."]
offset_left = -554.0
offset_top = 264.0
offset_right = -78.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 68
text = "Vestido
"

[node name="Wrong2" type="Button" parent="."]
offset_left = 56.0
offset_top = 274.0
offset_right = 532.0
offset_bottom = 394.0
theme_override_font_sizes/font_size = 68
text = "Chaleco"

[node name="Wrong3" type="Button" parent="."]
offset_left = -552.0
offset_top = 412.0
offset_right = -76.0
offset_bottom = 532.0
theme_override_font_sizes/font_size = 68
text = "Trapo"

[connection signal="pressed" from="Wrong1" to="." method="_on_wrong_1_pressed"]
[connection signal="pressed" from="Correct" to="." method="_on_correct_pressed"]
[connection signal="pressed" from="Wrong2" to="." method="_on_wrong_2_pressed"]
[connection signal="pressed" from="Wrong3" to="." method="_on_wrong_3_pressed"]
